Updated script generation for installation of fastq

--- a/generate_samplesheet.ipynb
+++ b/generate_samplesheet.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "1d4a5c6d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('SraRunTable.csv', header = 0)"
+    "df = pd.read_csv('metadata/OSA_SraRunTable.csv', header = 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "0a44fd62",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "84674221",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "de53e00c",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "cf641516",
    "metadata": {},
    "outputs": [],
@@ -285,10 +285,10 @@
     "            sample_name = sample_mapping[gsm]\n",
     "            runs = row['Run']\n",
     "            \n",
-    "            f.write(f\"\\n{'='*60}\\n\")\n",
+    "            f.write(f\"\\n#{'='*60}\\n\")\n",
     "            f.write(f\"# Sample: {sample_name} (Original: {gsm})\\n\")\n",
     "            f.write(f\"# Status: {row['status']}, Sex: {row['sex']}, Age: {row['AGE']}\\n\")\n",
-    "            f.write(f\"{'='*60}\\n\\n\")\n",
+    "            f.write(f\"#{'='*60}\\n\\n\")\n",
     "            \n",
     "            f.write(f\"echo 'Processing {sample_name}...'\\n\")\n",
     "            f.write(f\"mkdir -p fastq/{sample_name}\\n\")\n",
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "5fc6efe4",
    "metadata": {},
    "outputs": [
