Fixed installation script

--- a/generate_samplesheet.ipynb
+++ b/generate_samplesheet.ipynb
@@ -272,7 +272,7 @@
     "        f.write(\"# Check if required tools are installed\\n\")\n",
     "        f.write(\"command -v prefetch >/dev/null 2>&1 || { echo 'prefetch not found. Install SRA Toolkit.'; exit 1; }\\n\")\n",
     "        f.write(\"command -v fasterq-dump >/dev/null 2>&1 || { echo 'fasterq-dump not found. Install SRA Toolkit.'; exit 1; }\\n\")\n",
-    "        f.write(\"command -v gzip >/dev/null 2>&1 || { echo 'gzip not found. Install gzip for compression.'; exit 1; }\\n\\n\")\n",
+    "        f.write(\"command -v gzip >/dev/null 2>&1 || { echo 'pigz not found. Install pigz for compression.'; exit 1; }\\n\\n\")\n",
     "        \n",
     "        # Write mapping table as comment\n",
     "        f.write(\"# Sample Mapping:\\n\")\n",
@@ -285,10 +285,10 @@
     "            sample_name = sample_mapping[gsm]\n",
     "            runs = row['Run']\n",
     "            \n",
-    "            f.write(f\"\\n#{'='*60}\\n\")\n",
+    "            f.write(f\"\\n# {'='*60}\\n\")\n",
     "            f.write(f\"# Sample: {sample_name} (Original: {gsm})\\n\")\n",
     "            f.write(f\"# Status: {row['status']}, Sex: {row['sex']}, Age: {row['AGE']}\\n\")\n",
-    "            f.write(f\"#{'='*60}\\n\\n\")\n",
+    "            f.write(f\"# {'='*60}\\n\\n\")\n",
     "            \n",
     "            f.write(f\"echo 'Processing {sample_name}...'\\n\")\n",
     "            f.write(f\"mkdir -p fastq/{sample_name}\\n\")\n",
@@ -298,16 +298,29 @@
     "                f.write(f\"# Lane {i}/4: {run}\\n\")\n",
     "                f.write(f\"echo '  Downloading {run} (Lane {i})...'\\n\")\n",
     "                f.write(f\"prefetch {run} || {{ echo 'Failed to prefetch {run}'; exit 1; }}\\n\")\n",
-    "                f.write(f\"fasterq-dump {run} --split-files --threads 8 || {{ echo 'Failed to dump {run}'; exit 1; }}\\n\\n\")\n",
+    "                f.write(f\"fasterq-dump {run} --split-files --include-technical --threads 8 || {{ echo 'Failed to dump {run}'; exit 1; }}\\n\\n\")\n",
+    "                \n",
+    "                f.write(f\"# For 10x data: _3 = R1 (28bp barcode+UMI), _4 = R2 (90bp cDNA)\\n\")\n",
+    "                f.write(f\"# Rename to Cell Ranger format and discard index reads (_1, _2)\\n\")\n",
+    "                f.write(f\"if [ -f {run}_3.fastq ] && [ -f {run}_4.fastq ]; then\\n\")\n",
+    "                f.write(f\"    echo '  Using _3 as R1 and _4 as R2 (10x Genomics format)'\\n\")\n",
+    "                f.write(f\"    mv {run}_3.fastq {sample_name}_S1_L00{i}_R1_001.fastq\\n\")\n",
+    "                f.write(f\"    mv {run}_4.fastq {sample_name}_S1_L00{i}_R2_001.fastq\\n\")\n",
+    "                f.write(f\"    rm -f {run}_1.fastq {run}_2.fastq  # Remove index reads\\n\")\n",
+    "                f.write(f\"elif [ -f {run}_1.fastq ] && [ -f {run}_2.fastq ]; then\\n\")\n",
+    "                f.write(f\"    echo '  Using _1 as R1 and _2 as R2 (standard paired-end)'\\n\")\n",
+    "                f.write(f\"    mv {run}_1.fastq {sample_name}_S1_L00{i}_R1_001.fastq\\n\")\n",
+    "                f.write(f\"    mv {run}_2.fastq {sample_name}_S1_L00{i}_R2_001.fastq\\n\")\n",
+    "                f.write(f\"else\\n\")\n",
+    "                f.write(f\"    echo 'ERROR: Cannot find expected FASTQ files for {run}'\\n\")\n",
+    "                f.write(f\"    ls -lh {run}*.fastq\\n\")\n",
+    "                f.write(f\"    exit 1\\n\")\n",
+    "                f.write(f\"fi\\n\\n\")\n",
     "                \n",
     "                f.write(f\"# Compress FASTQ files\\n\")\n",
     "                f.write(f\"echo '  Compressing...'\\n\")\n",
-    "                f.write(f\"gzip {run}_1.fastq\\n\")\n",
-    "                f.write(f\"gzip {run}_2.fastq\\n\\n\")\n",
-    "                \n",
-    "                f.write(f\"# Rename to Cell Ranger format\\n\")\n",
-    "                f.write(f\"mv {run}_1.fastq.gz {sample_name}_S1_L00{i}_R1_001.fastq.gz\\n\")\n",
-    "                f.write(f\"mv {run}_2.fastq.gz {sample_name}_S1_L00{i}_R2_001.fastq.gz\\n\\n\")\n",
+    "                f.write(f\"gzip {sample_name}_S1_L00{i}_R1_001.fastq\\n\")\n",
+    "                f.write(f\"gzip {sample_name}_S1_L00{i}_R2_001.fastq\\n\\n\")\n",
     "                \n",
     "                f.write(f\"# Clean up SRA file\\n\")\n",
     "                f.write(f\"rm -rf {run}\\n\\n\")\n",
@@ -331,7 +344,7 @@
     "    \n",
     "    print(f\"Download script saved to: {output_script}\")\n",
     "    print(f\"Sample mapping saved to: {mapping_file}\")\n",
-    "    print(f\"Make executable with: chmod +x {output_script}\")"
+    "    print(f\"Make executable with: chmod +x {output_script}\")\n"
    ]
   },
   {
